# sql-race

./: Cargo.toml  config.toml  dist-workspace.toml  question.challenge.toml  question.practice.toml  schema.sql  score.db  score.sql
.github/workflows/: check.yaml
crates/database-util/: Cargo.toml
crates/schema/: Cargo.toml
crates/tui/: Cargo.toml
questions/qs_1/: answer.sql  question.txt  schema.sql
questions/question-1/: answer.sql  question.txt  schema.sql
questions/question-10/: answer.sql  question.txt  schema.sql
questions/question-2/: answer.sql  question.txt  schema.sql
questions/question-3/: answer.sql  question.txt  schema.sql
questions/question-4/: answer.sql  question.txt  schema.sql
questions/question-5/: answer.sql  question.txt  schema.sql
questions/question-6/: answer.sql  question.txt  schema.sql
questions/question-7/: answer.sql  question.txt  schema.sql
questions/question-8/: answer.sql  question.txt  schema.sql
questions/question-9/: answer.sql  question.txt  schema.sql  test.db
src/: app.rs  config.rs  event.rs  id.rs  main.rs  message.rs  state.rs
src/app/: event.rs  id.rs  message.rs  mod.rs  mount.rs  screen.rs  state.rs  ui.rs  update.rs
src/compoment/: input.rs  mod.rs  rank.rs  schema.rs  table.rs
src/component/: editor.rs  global_listener.rs  help.rs  input.rs  mod.rs  name_input.rs  query_error.rs  question.rs  quit_listener.rs  result_table.rs  schema_view.rs  score.rs  score_board.rs  score_table.rs  text.rs  timer.rs  username_input.rs
src/config/: game.rs  mod.rs  question.rs
src/controllers/: mod.rs  (+5 more)
(+106 files in other folders)
