[package]
name = "sql-race"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.89"
bevy = "0.16.1"
bevy_ratatui = "0.9.2"
chrono = "0.4.38"
config = { version = "0.15.14", default-features = false }
futures = "0.3.31"
rand = "0.9.2"
ratatui = "0.29.0"
rayon = "1.11.0"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tui-textarea = "0.7.0"
widgetui = "0.7.1"
