[package]
name = "sql-race"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.89"
arboard = { version = "3.6.1", features = ["wl-clipboard-rs"] }
chrono = "0.4.38"
config = { version = "0.15.14", default-features = false }
rand = "0.9.2"
ratatui = "0.29.0"
rayon = "1.11.0"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
tui-realm-stdlib = "3.0.0"
tui-textarea = "0.7.0"
tuirealm = "3.0.1"
tuirealm_derive = "2.0.1"
